--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "author": "J. Tangelder",
   "license": "MIT",
   "peerDependencies": {
-    "node-sass": "^3.4.2",
-    "webpack": "^1.12.6"
+    "node-sass": "^3.7.0",
+    "webpack": "^1.12.16 || ^2.1.0-beta"
   },
   "dependencies": {
     "async": "^1.4.0",
